@@ -1,11 +1,16 @@
+
+==================================================================================================
+Changes for X.X
+==================================================================================================
+- Bug Fix (472): Better framewriter error messages
+- Bug Fix (985): Fix daqd for single-machine framebuilder in kernel 3.2
+- Bug Fix (1010): Prevent divide-by-zero error in daqd filesys.hh
 ==================================================================================================
 Changes for 3.0.2
 ==================================================================================================
 - Bug Fix to SUM.pm part connection checking.
 - Bug Fix to auto-generated ADC monitor screens. Screens for models which use several top level
   signal names were not being generated correctly.
-- Bug Fix (472): Better framewriter error messages
-- Bug Fix (985): Fix daqd for single-machine framebuilder in kernel 3.2
 ==================================================================================================
 Changes for 3.0.1
 ==================================================================================================
